--- a/src/components/layout/global.css
+++ b/src/components/layout/global.css
@@ -2,3 +2,10 @@ body {
   margin: 0;
   background-color: #f8f9fa;
 }
+
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
+}
